<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_pomodoro"
        android:icon="@drawable/ic_pomodoro"
        android:title="@string/nav_pomodoro" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/navigation_habits"
        android:icon="@drawable/ic_habits"
        android:title="@string/nav_habits" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
