<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="48dp"
    android:paddingHorizontal="14dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        >

        <!-- Başlık -->
        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/settings_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/textcolor"
            />

        <!-- Tema Ayarı -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/theme"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/themeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textcolor"
                    android:text="@string/light_theme"/>

                <RadioButton
                    android:id="@+id/radioDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textcolor"
                    android:shadowColor="@color/textcolor"
                    android:text="@string/dark_theme"/>
            </RadioGroup>
        </LinearLayout>

        <!-- Dil Ayarı -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Pomodoro Süre Ayarı -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pomodoro_duration"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/durationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Bildirim -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable_notifications"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notificationSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Verileri Temizle -->
        <Button
            android:id="@+id/clearDataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_app_data"
            android:textSize="16sp"
            android:textColor="@color/buttonText"
            android:backgroundTint="@color/button"
            android:layout_marginTop="24dp"

            android:layout_marginBottom="12dp"
            />
    </LinearLayout>
</ScrollView>
