<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_top_corners"
    android:padding="20dp">

    <!-- Başlık -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_task_title"
        android:textSize="22sp"
        android:textColor="@color/textcolor"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Icon ve Task Name -->
    <LinearLayout
        android:id="@+id/nameIconLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:background="@color/button"
                app:tint="@color/background"
                android:scaleType="centerInside"/>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/taskNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/task_name_hint"
            android:inputType="text"
            android:textColorHint="@color/textcolor"
            android:textColor="@color/textcolor"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <!-- Date ve Time yan yana -->
    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/nameIconLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/taskDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_hint"
            android:focusable="false"
            android:inputType="date"
            android:textColorHint="@color/textcolor"
            android:textColor="@color/textcolor"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/taskTimeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/time_hint"
            android:focusable="false"
            android:inputType="time"
            android:textColorHint="@color/textcolor"
            android:textColor="@color/textcolor"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Update Butonu -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_button"
        android:textSize="16sp"
        android:textColor="@color/buttonText"
        android:backgroundTint="@color/button"
        app:layout_constraintTop_toBottomOf="@id/dateTimeLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Delete -->
    <TextView
        android:id="@+id/cancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/cancelColor"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
