<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingTop="48dp"
    android:paddingHorizontal="4dp">

    <!-- Başlık -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="10dp"
        android:text="@string/stats_title"
        android:textColor="@color/textcolor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Özet Kartlar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3"
        android:layout_marginTop="20dp"

        android:layout_marginBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCompletedTasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvCompletedTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/completed_tasks"
                    android:textColor="@color/textcolor"
                    android:textSize="12sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotalPomodoros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvTotalPomodoros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_pomodoros"
                    android:textColor="@color/textcolor"
                    android:textSize="12sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFocusTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvFocusTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/focus_time"
                    android:textColor="@color/textcolor"
                    android:textSize="12sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Haftalık istatistik başlığı -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weekly_stats"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textcolor"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="8dp"/>

    <!-- Seçim düğmeleri -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/btnShowTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/tasks_label"
            android:textSize="14sp"
            android:textColor="@color/textcolor"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/dark_cancelColor"/>

        <TextView
            android:id="@+id/btnShowPomodoro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/pomodoro_label"
            android:textSize="14sp"
            android:textColor="@color/textcolor"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/dark_cancelColor"/>
    </LinearLayout>

    <!-- Task Grafiği -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardTaskChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/cardBackground">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chartTasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <!-- Pomodoro Grafiği -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardPomodoroChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/cardBackground"
        android:visibility="gone">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartPomodoro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>


    <!-- Son Görevler/Pomodorolar -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_activity"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textcolor"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="8dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRecentActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="-5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/cardBackground">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecentActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>
